Finalizando o curso de django criando o alura space

--- a/templates/galeria/base.html
+++ b/templates/galeria/base.html
@@ -16,7 +16,8 @@
 </head>
 
 <body>
-    {% block content %}
-    {% endblock %}
+    {% include 'galeria/partials/_lateral.html' %}
+    {% block content %}{% endblock %}
+    {% include 'galeria/partials/_footer.html' %}
 </body>
 </html>
